fixes article aside width on mobile

--- a/assets/prince.css
+++ b/assets/prince.css
@@ -183,7 +183,7 @@ article .main-content .post-content {
 
   article .main-content aside {
     display: block;
-    width: 100%;
+    width: calc(100% - 2em);
   }
 }
 
